# business-card-synth

./: .gitignore  README.md
.github/workflows/: website.yml
firmware/: CMakeLists.txt  STM32G431CBTx_FLASH.ld  audio.c  audio.h  battery.c  battery.h  clock.c  clock.h  keyboard.c  keyboard.h  main.c
pcb/: business-card-synth.kicad_pcb  business-card-synth.kicad_pro  business-card-synth.kicad_sch  config.yml
pcb/lib/: LICENSE  business-card-synth.kicad_sym
pcb/lib/3d-models/: Jack_3.5mm_SS_SJ-43617-SMT_Horizontal.stp  Potentiometer_Bourns_3306P_Horizontal.stp  Speaker_SameSky_CMS-131304-SMT-TR.stp
pcb/lib/business-card-synth.pretty/: Jack_3.5mm_SS_SJ-43617-SMT_Horizontal.kicad_mod  Potentiometer_Bourns_3306P_Horizontal.kicad_mod  Speaker_SameSky_CMS-131304-SMT-TR.kicad_mod  julialabs.kicad_mod  qrcode.kicad_mod
